--- a/veritas-chat/package.json
+++ b/veritas-chat/package.json
@@ -10,9 +10,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
